# ble-lock-session

./: README.md  ble-lock-session.py  ble-lock-session.py.orig  ble-lock-session.service  ble_lock_session.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
ble_lock_session.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_ble_lock_session.py
