[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ble-lock-session"
dynamic = ["version"]
description = "Lock and unlock your Linux session based on the proximity of a Bluetooth device"
readme = "README.md"
license = { text = "GPL-3.0-only" }
requires-python = ">=3.8"
authors = [{ name = "Azratul" }]
keywords = ["bluetooth", "ble", "proximity", "lock", "screen", "linux", "bluez"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Desktop Environment :: Screen Savers",
    "Topic :: Security",
]

[project.urls]
Homepage = "https://github.com/azratul/ble-lock-session"
Issues = "https://github.com/azratul/ble-lock-session/issues"

[project.scripts]
ble-lock-session = "ble_lock_session:main"

[tool.setuptools]
py-modules = ["ble_lock_session"]

[tool.setuptools.dynamic]
version = { attr = "ble_lock_session.__version__" }
